tests/samples/negative/traits/trait_predicate_generic_trait_arity.ax
module trait_predicate_generic_trait_arity;

trait Needs[T] {}

fn use_needs[U](value: U) -> i32 where U: Needs {
    return 0;
}

fn main() -> i32 {
    return 0;
}
